--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <source src="/cdn/songs.mp3" type="audio/mpeg">
           </audio>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
