--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <div class="birthdayimg">
-        <div class="middle">
-            <h2>Ready for the Surprise?</h3>
+        <div class="middle" id="middle"> 
+            <h3>Ready for the Surprise?</h3>
             <p id="countDown" style="margin-top: 5vw;"></p>
         </div>
-        <audio autoplay loop>
+        <audio id="songs" autoplay loop>
             <source src="/cdn/songs.mp3" type="audio/mpeg">
           </audio>
     </div>
