--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
     <div class="birthdayimg">
-        <div class="middle" id="middle"> 
-            <h3>Ready for the Surprise?</h3>
+        <div class="middle" id="middle">
+            <div class="container">
+                <p class="typed">Ready For Surprise???</p>
+            </div>
             <p id="countDown" style="margin-top: 5vw;"></p>
         </div>
         <audio id="songs" autoplay loop>
             <source src="/cdn/songs.mp3" type="audio/mpeg">
-          </audio>
+        </audio>
     </div>
 
     <script src="./script.js"></script>
