--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onclick="playpause()" >
     <div class="birthdayimg">
         <div class="middle" id="middle">
             <div class="container">
